syntax = "proto3";

option java_multiple_files = true;
//option java_package = "protobuf.grpc.authentication";
//option java_outer_classname = "AuthenticationProto";

package authentication;



service Authentication {
  rpc SignUp(SignUpRequest) returns (SignUpResponse);
  rpc SignIn(SignInRequest) returns (SignInResponse);
}


message SignUpRequest {
  string username = 1;
  string password = 2;
  string role = 3;
}


message SignUpResponse {
  bool success = 1;
  string message = 2;
}


message SignInRequest {
  string username = 1;
  string password = 2;
}

message SignInResponse {
  bool success = 1;
  string message = 2;
  string jwt = 3;
}

